<resources>
    <string name="app_name">EjerLab03vF</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <color name="nuevoColor">#C5e2f0</color>
    <string name="Dólares">A soles</string>
    <string name="Soles">A dólares</string>
    <string name="Convertir">Calcular</string>
    <string name="miClicManejador">miClicManejador</string>
    <string name="Euros">A Euros</string>
    <string name="Libras">A Libras</string>
    <string name="Yuanes">A Yuanes</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>